fixed form alignment

--- a/form.css
+++ b/form.css
@@ -1,28 +1,34 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     outline: none;
+    font-family: 'Poppins', sans-serif;
+    box-sizing: border-box;
   }
   
   body{
     background: #00ccff;
   }
+
+  .form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   
   .wrapper{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    max-width: 350px;
-    width: 100%;
+    max-width: 500px;
+    width: 80%;
     background: #fff;
     padding: 25px;
     border-radius: 5px;
-    box-shadow: 4px 4px 2px rgb(17, 128, 255); 
-    margin-bottom: 20px;
+    box-shadow: 4px 4px 2px rgb(17, 128, 255);
+    margin-bottom: 100px;
+    margin-top: 80px;
   }
   
   .wrapper h2{
@@ -76,7 +82,7 @@
 
 .footer {
     display: flex;
-    bottom:0; 
+    bottom:0%; 
     width:100%; 
     height: 70px;
     background-color: #f9f9f9fa;
